[package]
name = "ryt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
regex = "1.7"
console = "0.15"
url = "2.3"
thiserror = "1.0"
toml = "0.8"